--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,11 @@ body {
   padding: 0;
   width: 100%;
   font-family: 'Inter', sans-serif;
+  background-color: #ff704d;
+}
+
+#root {
+  width: 100%;
 }
 
 .container {
@@ -27,111 +32,6 @@ body {
   justify-content: center;
 }
 
-.calculator {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 350px;
-}
-
-@media only screen and (min-width: 500px) {
-  .calculator {
-    width: 450px;
-  }
-}
-
-@media only screen and (min-width: 700px) {
-  .calculator {
-    width: 650px;
-  }
-}
-
-.input-container {
-  background-color: #8ca9ff;
-  width: 80%;
-  height: 5vh;
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  font-size: 20px;
-}
-
-.input-container > button {
-  padding: 8px;
-}
-
-.keys {
-  height: 280px;
-  font-size: 18px;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.row {
-  height: 80px;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  justify-content: center;
-}
-
-.number {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  padding: 0;
-}
-
-.symbol {
-  width: calc(100% / 5);
-  display: flex;
-  justify-content: center;
-  padding: 0;
-}
-
-.number > button,
-.symbol > button {
-  width: calc(100% / 5);
-  height: 80px;
-  background-color: #ffb834;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  user-select: none;
-  cursor: pointer;
-  padding: 0;
-  transition: 0.15s;
-}
-
-.symbol > button {
-  width: 100%;
-  height: 80px;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  user-select: none;
-  cursor: pointer;
-  padding: 0;
-  border: 1px solid #919191;
-}
-
-.number > button {
-  background-color: #cacaca;
-  border: 1px solid #919191;
-}
-
-.number > button:hover {
-  background-color: #dfdfdf;
-}
-
-.symbol > button:hover {
-  background-color: #ffdb98;
-}
-
-#button-wide {
-  width: calc(100% / 2.5);
+a {
+  color: #fb0 !important;
 }
